PO-8613 Migrate DEV off of caGRID Training Tier by 2/20/15.
git-svn-id: https://ncisvn.nci.nih.gov/svn/coppa/trunk/code@18105 553898ca-32d5-487a-af8b-6cf4ca579ab4