@@ -45,6 +45,8 @@
     You should have created a database during the build-po install. 
 
 1.3 Full CI build (WILL DROP AND RE-CREATE YOUR DATABASE!)
+    Modify your JBoss start-up script to include the following JVM option: -Dctrp.env.ci=true
+    	Example: set JAVA_OPTS=-Dctrp.env.ci=true -Xmx1303M -XX:MaxPermSize=256M -Djava.net.preferIPv4Stack=true -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=9700 -Xdebug -Dorg.apache.catalina.connector.URI_ENCODING=UTF-8
     Stop JBoss
     mvn clean install
     mvn cargo:deploy
